components/quarkus-component-e2e-urrzdpdfzz/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: pet-clinic-e2e-hqpzwnstvo
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: quarkus-component-e2e-urrzdpdfzz
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elquarkus-component-e2e-urrzdpdfzz
  namespace: has-e2e-d10443ad-62c7-4c71-aa27-49d69fc0a8a3
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-quarkus-component-e2e-urrzdpdfzz
    weight: null
status: {}
